fixes for menu styles and for menu going out of screen

--- a/src/assets/styles/scss/material/_menus.scss
+++ b/src/assets/styles/scss/material/_menus.scss
@@ -194,6 +194,7 @@ top-menu {
       min-width: 160px;
       line-height: initial;
       height: initial;
+      white-space: initial;
       &:hover, &:focus {          
         background-color: map-get($accent, 30);
       }
